--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,13 @@
             <artifactId>java-jwt</artifactId>
             <version>3.11.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.18</version>
+        </dependency>
+
     </dependencies>
 
     <build>
