--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <version>42.2.18</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.5.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
