--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,12 @@
             <version>2.5.0.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.1.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
