--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/video_platform_db
-spring.datasource.username=praczkowski
-spring.datasource.password=mojehaslo
+spring.datasource.url=jdbc:h2:./data/db
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.database=H2
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 spring.jackson.time-zone=UTC
